# wetlands_notebook

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  NISAR_ATBD_wetlands.ipynb  README.md  environment.yaml  environment.yml  pinned_environment.yaml  pyproject.toml
.github/workflows/: release-checklist-comment.yml  release.yml  static-analysis.yml  tag-version.yml  test-and-build.yml
src/hyp3_wetlands/: __init__.py  __main__.py  process.py
src/hyp3_wetlands/etc/: entrypoint.sh
tests/: test_entrypoints.py
